2005-01-07  Carl Worth  <cworth@cworth.org>

	* TODO: Add Owen's new equation to fix clipping:
	((src Op dest) In clip) Add (dest Out clip)

2005-01-06  Carl Worth  <cworth@cworth.org>

	* TODO: Added some TODO items from mailing list traffic.
	Added cairo_show_surface_mask and note about clipping problems.

2005-01-05  Kristian Høgsberg  <krh@redhat.com>

	* src/cairo_pdf_surface.c: (emit_image_data): Implement image
	compression (taken from cairo_ps_surface.c).

	* src/cairo_pdf_surface.c: New PDF backend.
	* src/cairo.h: Add PDF surface constructors.
	* src/cairo_array.c: New file - generic array implementation.
	* src/cairoint.h: Add cairo_array prototypes.
	* src/Makefile.am (libcairo_la_SOURCES):
	Add cairo_array.c and cairo_pdf_surface.c.

2004-12-23  Carl Worth  <cworth@cworth.org>

	* src/cairo_traps.c: Remove unused CAIRO_TRAPS_GROWTH_INC.

	* src/cairo_spline.c (_cairo_spline_add_point): 
	* src/cairo_polygon.c (_cairo_polygon_add_edge): Resize arrays by
	doubling rather than by linear increments.

	* BUGS: Add new bug exposed centi_unfinished.svg.

2004-12-21  Carl Worth  <cworth@cworth.org>

 	* src/cairoint.h: 
	* src/cairo_wideint.h: Rename __internal_linkage to cairo_private
	and move it to the beginning of the line for function
	declarations. Also, drop unneeded "extern" from function
	declarations.

2004-12-21  Carl Worth  <cworth@cworth.org>

	With thanks to Kristian Høgsberg <krh@bitplanet.net>:
	* src/cairoint.h: 
	* src/cairo_wideint.h: Tag a few private functions/data that were
	missing __internal_linkage.

	* src/cairo_xlib_surface.c: 
	* src/cairo_ft_font.c: 
	* src/cairo_font.c: Mark cache backends as static.

2004-12-20  Carl Worth  <cworth@cworth.org>

	* autogen.sh (LANG): Change "head -1" to more standard "head -n
	1".

2004-12-20  Alexander Larsson  <alexl@redhat.com>

	* src/cairo_xlib_surface.c (_cairo_xlib_surface_create_with_size):
	Fix bug in earlier change.

2004-12-20  Carl Worth  <cworth@cworth.org>
